--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "tcp_echo",
   "version": "1.0.0",
   "description": "tcp_echo server 학습",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.js"
+    "dev": "node src/server.js",
+    "client": "node public/client.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "^3.3.3"
+  }
 }
